Fixed photo alignment

--- a/src/components/ImageSlider/slider.css
+++ b/src/components/ImageSlider/slider.css
@@ -1,11 +1,11 @@
 .slide {
     opacity: 0;
-    transition-duration: 1s ease;
+    transition-duration: 0.5s ease;
     
     }
 
     .slide.active {
         opacity: 1;
-        transition-duration: 1s;
+        transition-duration: 0.5s;
         transform: scale(1.08);
     }
